--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </div>
 <ul>
     <li><a href="Weight_V2.76.zip" title=Weight_V2.76.zip" target="_blank">Zip mit Anleitung und Programmdateien</a></li>
-    <li><a href="1.mp4" title="1.mp4"" target="_blank">Video Registrierung</a></li>
-    <li><a href="2.mp4" title="2.mp4"" target="_blank">Im Testcontainer</a></li>
-    <li><a href="3.mp4" title="3.mp4" target="_blank">Die Zukunft: Gewichtsanzeige direkt im Browser</a></li>
+    <li><a href="1.mp4" title="1.mp4" target="_blank">Video: Registrierung</a></li>
+    <li><a href="2.mp4" title="2.mp4" target="_blank">Video: Im Testcontainer</a></li>
+    <li><a href="3.mp4" title="3.mp4" target="_blank">Video: Die Zukunft. Gewichtsanzeige direkt im Browser(Edge, Chrome)</a></li>
 </ul>
 </body>
